--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,8 @@ footer {
 }
 
 footer h2 {
-  display: inline;
+  justify-content: space-between;
+  flex-wrap: wrap;
   color: #024e76;
   font-size: 30px;
   margin: 0;
@@ -79,11 +80,12 @@ section {
 
 /* Hero Style Start */
 .hero {
-  background-image: url('../images/hero-bg.jpg');
-  height: 600px;
-  background-size: cover;
-  background-position: center;
-  position: relative;
+ background-image: url('../images/hero-bg.jpg');
+background-size: cover;
+ background-position: center;
+ display: flex;
+ justify-content: center;
+ flex-wrap: wrap;
 }
 /* Hero Style End */
 
@@ -91,11 +93,7 @@ section {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   color: #024e76;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
 }
 
 .hero-form h3 {
@@ -104,6 +102,21 @@ section {
 }
 .hero-form p {
   margin: 5px 0 15px 0;
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 .form-input {
