--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,6 @@ body {
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
 }
 
 header h1 {
@@ -24,30 +21,26 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  display: inline;
 }
-
 header a {
   text-decoration: none;
   color: #fce138;
 }
 
 header nav {
+  float: right;
   margin: 7px 0;
-
 }
 
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
+header nav ul li {
+  display: inline;
 }
 
 header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
-  font-size: 1.55vw;
+  font-size: 22px;
 }
 
 footer {
@@ -57,8 +50,7 @@ footer {
 }
 
 footer h2 {
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
@@ -80,12 +72,11 @@ section {
 
 /* Hero Style Start */
 .hero {
- background-image: url('../images/hero-bg.jpg');
-background-size: cover;
- background-position: center;
- display: flex;
- justify-content: center;
- flex-wrap: wrap;
+  background-image: url('../images/hero-bg.jpg');
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 /* Hero Style End */
 
@@ -93,7 +84,11 @@ background-size: cover;
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
+  width: 500px;
   color: #024e76;
+  position: absolute;
+  bottom: 120px;
+  right: 140px;
 }
 
 .hero-form h3 {
@@ -102,21 +97,6 @@ background-size: cover;
 }
 .hero-form p {
   margin: 5px 0 15px 0;
-}
-
-.hero-cta {
-  width: 35%;
-  text-align: right;
-  margin: 3.5%;
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.3;
-}
-
-.hero-cta h2 {
-  font-style: italic;
-  font-size: 55px;
-  color: #fce138;
 }
 
 .form-input {
